tests/negative/regression/r24.orng
fn main() -> Int {
    let x: ?{Int}
    4
}